# ai-coder-saas

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  catalog.json
backend/: README.md  pyproject.toml
backend/app/: __init__.py  chat.py  db.py  documents.py  main.py  models.py  terms.py
backend/tests/: conftest.py  test_api.py  test_chat.py  test_documents.py  test_drafts.py  test_login.py
frontend/: README.md  next.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BrandMark.tsx  DocumentChat.tsx  DocumentForm.tsx  DocumentLibrary.tsx  DocumentPreview.tsx  LoginScreen.tsx  NdaChat.tsx  NdaDocument.tsx  NdaForm.tsx
frontend/src/lib/: api.ts  chat.ts  documents.ts  nda.ts  session.ts
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
